force-app/main/default/objects/Contact/fields/mkto71_Demographic_Score__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Demographic_Score__c</fullName>
    <label>Demographic Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>