force-app/main/default/objects/Contact/fields/Modify_Date__c.field-meta.xml
<CustomField>
    <fullName>Modify_Date__c</fullName>
    <description>This field gives the date on the record was Modified</description>
    <formula>TEXT(YEAR(DATEVALUE(LastModifiedDate))) 
+ 
If(MONTH(DATEVALUE(LastModifiedDate))&lt;=9,&apos;0&apos;+TEXT(MONTH(DATEVALUE(LastModifiedDate))),TEXT(MONTH(DATEVALUE(LastModifiedDate)))) 
+ 
If(DAY(DATEVALUE(LastModifiedDate))&lt;=9,&apos;0&apos;+TEXT(DAY(DATEVALUE(LastModifiedDate))),TEXT(DAY(DATEVALUE(LastModifiedDate))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modify Date</label>
    <type>Text</type>
</CustomField>