force-app/main/default/objects/Contact/fields/Most_Recent_Cadence_Cadence_Name__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Cadence_Cadence_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Most Recent Cadence - Cadence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>