force-app/main/default/objects/Contact/fields/Most_Recent_Cadence_Last_Completed_Ste__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Cadence_Last_Completed_Ste__c</fullName>
    <label>Most Recent Cadence Last Completed Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>