force-app/main/default/objects/Contact/fields/Most_Recent_Cadence_Next_Step_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Cadence_Next_Step_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Most Recent Cadence - Next Step Due Date</label>
    <type>Date</type>
</CustomField>