force-app/main/default/objects/Contact/fields/Nieuwsbrief__c.field-meta.xml
<CustomField>
    <fullName>Nieuwsbrief__c</fullName>
    <description>Vul het e-mail adres in waarop deze contactpersoon de Zimmer Nieuwsbrief wil ontvangen.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nieuwsbrief</label>
    <length>50</length>
    <type>Text</type>
</CustomField>