force-app/main/default/objects/Contact/fields/Non_Compete_Status__c.field-meta.xml
<CustomField>
    <fullName>Non_Compete_Status__c</fullName>
    <formula>IF( NOT(Zb_Noncompete_count__c  = 0), &apos;On File&apos;, &apos;Not Available&apos;)</formula>
    <label>ZB Non-Compete Status</label>
    <type>Text</type>
</CustomField>