force-app/main/default/objects/Contact/fields/NOVO_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>NOVO_Contact_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NOVO Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>