force-app/main/default/objects/Contact/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <description>This Field gives the NPI number related to each and every individual sales reps</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NPI#</label>
    <length>40</length>
    <type>Text</type>
</CustomField>