force-app/main/default/objects/Contact/fields/NPI_State_Phone__c.field-meta.xml
<CustomField>
    <fullName>NPI_State_Phone__c</fullName>
    <formula>IF (ISBLANK(Account.NPI__c ), &quot;&quot;, Account.NPI__c &amp; &quot; | &quot;) &amp;
 IF (ISBLANK(Phone) , &quot;&quot; , Phone &amp; &quot; | &quot;) &amp;
 IF (ISBLANK( MailingCity ), &quot;&quot;, MailingCity &amp; &quot; | &quot;) &amp; 
 IF (ISBLANK( MailingState ), &quot;&quot;, MailingState)</formula>
    <label>NPI State Phone</label>
    <type>Text</type>
</CustomField>