force-app/main/default/objects/Contact/fields/Office_Name__c.field-meta.xml
<CustomField>
    <fullName>Office_Name__c</fullName>
    <description>Used to identify physician office name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>