force-app/main/default/objects/Contact/fields/Office_Specialty_Type__c.field-meta.xml
<CustomField>
    <fullName>Office_Specialty_Type__c</fullName>
    <description>Office Specialty Type - Custom Picklist</description>
    <label>Office Specialty Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CA DOD</fullName>
            </value>
            <value>
                <fullName>Centre mutualiste</fullName>
            </value>
            <value>
                <fullName>Denturist</fullName>
            </value>
            <value>
                <fullName>Denturist CA</fullName>
            </value>
            <value>
                <fullName>Dept of Defense</fullName>
            </value>
            <value>
                <fullName>Dept of Justice</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Endodontist</fullName>
            </value>
            <value>
                <fullName>Etablissement de Santé privé</fullName>
            </value>
            <value>
                <fullName>Etablissement de Santé public</fullName>
            </value>
            <value>
                <fullName>General Dentist</fullName>
            </value>
            <value>
                <fullName>Government CA</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Implantologist</fullName>
            </value>
            <value>
                <fullName>Institution</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>Medical Doctor</fullName>
            </value>
            <value>
                <fullName>Military CA</fullName>
            </value>
            <value>
                <fullName>Multispecialty</fullName>
            </value>
            <value>
                <fullName>Oral Surgeon</fullName>
            </value>
            <value>
                <fullName>Orthodontist</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pedodontist</fullName>
            </value>
            <value>
                <fullName>Periodontist</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Prosthodontist</fullName>
            </value>
            <value>
                <fullName>Restorative Dentist</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>VA Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>