force-app/main/default/objects/Contact/fields/On_Leave_Process_Triggered__c.field-meta.xml
<CustomField>
    <fullName>On_Leave_Process_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Leave Process Triggered</label>
    <type>Checkbox</type>
</CustomField>