force-app/main/default/objects/Contact/fields/Opleiding__c.field-meta.xml
<CustomField>
    <fullName>Opleiding__c</fullName>
    <description>Beschrijf de opleiding van deze contactpersoon. Je kan hier ook invullen wanneer en met welk onderwerp de contactpersoon is gepromoveerd.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Beschrijf de opleiding van deze contactpersoon. Je kan hier ook invullen wanneer en met welk onderwerp de contactpersoon is gepromoveerd.</inlineHelpText>
    <label>Opleiding</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>