force-app/main/default/objects/Contact/fields/Ops_Calls_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Ops_Calls_Meetings__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Conference calls/meetings with Operation Leaders</inlineHelpText>
    <label>Ops Calls/Meetings</label>
    <type>Checkbox</type>
</CustomField>