force-app/main/default/objects/Contact/fields/Opt_out_Decline__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_Decline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opt-out/ Decline</label>
    <type>Date</type>
</CustomField>