force-app/main/default/objects/Contact/fields/Original_Hire_date__c.field-meta.xml
<CustomField>
    <fullName>Original_Hire_date__c</fullName>
    <description>Populates Hire date value on creation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Hire date</label>
    <type>Date</type>
</CustomField>