force-app/main/default/objects/Contact/fields/Other_Email__c.field-meta.xml
<CustomField>
    <fullName>Other_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Weitere E-Mail</label>
    <type>Email</type>
</CustomField>