force-app/main/default/objects/Contact/fields/Other_Fax__c.field-meta.xml
<CustomField>
    <fullName>Other_Fax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Weitere Fax-Nr.</label>
    <type>Phone</type>
</CustomField>