force-app/main/default/objects/Contact/fields/Other_Mobilephone__c.field-meta.xml
<CustomField>
    <fullName>Other_Mobilephone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Weitere Mobil-Nr.</label>
    <type>Phone</type>
</CustomField>