force-app/main/default/objects/Contact/fields/Other_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Name__c</fullName>
    <description>Other facility name for physcians</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>