force-app/main/default/objects/Contact/fields/OtherPOBox__c.field-meta.xml
<CustomField>
    <fullName>OtherPOBox__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Weiteres Postfach</label>
    <length>30</length>
    <type>Text</type>
</CustomField>