force-app/main/default/objects/Contact/fields/PartnerID__c.field-meta.xml
<CustomField>
    <fullName>PartnerID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>PartnerID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>