force-app/main/default/objects/Contact/fields/PARXladeID__c.field-meta.xml
<CustomField>
    <fullName>PARXladeID__c</fullName>
    <description>ID für ein eventuelles Nachladen von Initialisierungs Kontakt Daten</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PARXladeID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>