force-app/main/default/objects/Contact/fields/Patient_Education_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Patient_Education_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Education Opt In</label>
    <type>Checkbox</type>
</CustomField>