force-app/main/default/objects/Contact/fields/Patient_Events_Seminars_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Patient_Events_Seminars_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Events &amp; Seminars Opt In</label>
    <type>Checkbox</type>
</CustomField>