force-app/main/default/objects/Contact/fields/person_acco__c.field-meta.xml
<CustomField>
    <fullName>person_acco__c</fullName>
    <description>this is used to fetch person account id of Surgeons</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>person account ID</label>
    <type>Text</type>
</CustomField>