force-app/main/default/objects/Contact/fields/Personnel_Area__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Personnel Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>