force-app/main/default/objects/Contact/fields/Phone_Mail__c.field-meta.xml
<CustomField>
    <fullName>Phone_Mail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone Mail</label>
    <length>5</length>
    <type>Text</type>
</CustomField>