force-app/main/default/objects/Contact/fields/Physician_Electronic_Signature__c.field-meta.xml
<CustomField>
    <fullName>Physician_Electronic_Signature__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Electronic Signature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>