force-app/main/default/objects/Contact/fields/Physician_Locator_Status__c.field-meta.xml
<CustomField>
    <fullName>Physician_Locator_Status__c</fullName>
    <label>Physician Locator Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Locator Pending</fullName>
                <default>true</default>
                <label>Locator Pending</label>
            </value>
            <value>
                <fullName>Locator Displayed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>