force-app/main/default/objects/Contact/fields/PhysicianLocatorUpdated__c.field-meta.xml
<CustomField>
    <fullName>PhysicianLocatorUpdated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PhysicianLocatorUpdated</label>
    <length>5</length>
    <type>Text</type>
</CustomField>