force-app/main/default/objects/Contact/fields/Physicians_Locator__c.field-meta.xml
<CustomField>
    <fullName>Physicians_Locator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates where we recieved the list information</description>
    <inlineHelpText>Check this box if you want to select this list for your mailng</inlineHelpText>
    <label>Physicians Locator</label>
    <type>Checkbox</type>
</CustomField>