force-app/main/default/objects/Contact/fields/Planned_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Hire_Date__c</fullName>
    <description>Date in which we are targeting the hire for a specific role within the sales organization</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Planned Hire Date</label>
    <type>Date</type>
</CustomField>