force-app/main/default/objects/Contact/fields/Portal_Username__c.field-meta.xml
<CustomField>
    <fullName>Portal_Username__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Portal Username</label>
    <type>Email</type>
</CustomField>