force-app/main/default/objects/Contact/fields/Preferred_City__c.field-meta.xml
<CustomField>
    <fullName>Preferred_City__c</fullName>
    <formula>IF( ISPICKVAL(Preferred_Mail_Address__c , &quot;Office&quot;) ,    MailingCity   ,   OtherCity )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred City</label>
    <type>Text</type>
</CustomField>