force-app/main/default/objects/Contact/fields/Preferred_Contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact__c</fullName>
    <label>Preferred Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Office Phone</fullName>
            </value>
            <value>
                <fullName>Cell Phone</fullName>
            </value>
            <value>
                <fullName>Home Phone</fullName>
            </value>
            <value>
                <fullName>Pager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>