force-app/main/default/objects/Contact/fields/Preferred_Country__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Country__c</fullName>
    <formula>IF( ISPICKVAL(Preferred_Mail_Address__c , &quot;Office&quot;) ,    MailingCountry  ,  OtherCountry )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Country</label>
    <type>Text</type>
</CustomField>