force-app/main/default/objects/Contact/fields/Preferred_HTML_Email_Format__c.field-meta.xml
<CustomField>
    <fullName>Preferred_HTML_Email_Format__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exact Target mailing HTML else text if unchecked</description>
    <label>Preferred HTML Email Format</label>
    <type>Checkbox</type>
</CustomField>