force-app/main/default/objects/Contact/fields/Preferred_Mail_Address__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Mail_Address__c</fullName>
    <label>Preferred Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Office</fullName>
                <default>true</default>
                <label>Office</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Mailing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>