force-app/main/default/objects/Contact/fields/Preferred_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Preferred_State_Province__c</fullName>
    <formula>IF( ISPICKVAL(Preferred_Mail_Address__c , &quot;Office&quot;) , MailingState, OtherState  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred State/Province</label>
    <type>Text</type>
</CustomField>