force-app/main/default/objects/Contact/fields/Preferred_Street__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Street__c</fullName>
    <formula>IF( ISPICKVAL(Preferred_Mail_Address__c , &quot;Office&quot;) ,   MailingStreet , OtherStreet  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Street</label>
    <type>Text</type>
</CustomField>