force-app/main/default/objects/Contact/fields/Preferred_Zip__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Zip__c</fullName>
    <formula>IF( ISPICKVAL(Preferred_Mail_Address__c , &quot;Office&quot;) ,   MailingPostalCode, OtherPostalCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Zip</label>
    <type>Text</type>
</CustomField>