force-app/main/default/objects/Contact/fields/Product_Launch__c.field-meta.xml
<CustomField>
    <fullName>Product_Launch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Launch</label>
    <referenceTo>Product_Launch__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>