force-app/main/default/objects/Contact/fields/Product_Solution_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Product_Solution_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product &amp; Solution  Opt In</label>
    <type>Checkbox</type>
</CustomField>