force-app/main/default/objects/Contact/fields/Profiel__c.field-meta.xml
<CustomField>
    <fullName>Profiel__c</fullName>
    <description>Beschrijf kenmerken van deze contactpersoon. Bijv. bevriende collega&apos;s, hobby&apos;s en interesse gebieden.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Beschrijf kenmerken van deze contactpersoon. Bijv. bevriende collega&apos;s, hobby&apos;s en interesse gebieden.</inlineHelpText>
    <label>Profiel</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>