force-app/main/default/objects/Contact/fields/Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Qualified Date</label>
    <type>DateTime</type>
</CustomField>