force-app/main/default/objects/Contact/fields/Record_Edit_Status__c.field-meta.xml
<CustomField>
    <fullName>Record_Edit_Status__c</fullName>
    <label>Edit Status for Novo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>