force-app/main/default/objects/Contact/fields/Refer_To_SFDC_Id__c.field-meta.xml
<CustomField>
    <fullName>Refer_To_SFDC_Id__c</fullName>
    <description>This field gives the uniqe SFDC ID of the Master account to which the Inactive account refers to</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Refer To SFDC Unique Id #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>