force-app/main/default/objects/Contact/fields/Refer_To_SFDC_Id_SAPBW__c.field-meta.xml
<CustomField>
    <fullName>Refer_To_SFDC_Id_SAPBW__c</fullName>
    <formula>LEFT(Refer_To_SFDC_Id__c,15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refer_To_SFDC_Id_SAPBW</label>
    <type>Text</type>
</CustomField>