force-app/main/default/objects/Contact/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region</label>
    <length>25</length>
    <type>Text</type>
</CustomField>