force-app/main/default/objects/Contact/fields/Rehire__c.field-meta.xml
<CustomField>
    <fullName>Rehire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked if the contact is reactivated (rehired)</description>
    <label>Rehire</label>
    <type>Checkbox</type>
</CustomField>