force-app/main/default/objects/Contact/fields/Requisition_Number__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Number__c</fullName>
    <label>Requisition Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>