force-app/main/default/objects/Contact/fields/Role_Classification__c.field-meta.xml
<CustomField>
    <fullName>Role_Classification__c</fullName>
    <description>This field is used to identify distributor personnel for manpower reporting purposes.</description>
    <label>Role Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CMF&amp;T</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Office - Admin</fullName>
            </value>
            <value>
                <fullName>Office - Customer Service Leader</fullName>
            </value>
            <value>
                <fullName>Office - Customer Service Representative</fullName>
            </value>
            <value>
                <fullName>Office - Driver</fullName>
            </value>
            <value>
                <fullName>Office - HR/Compliance</fullName>
            </value>
            <value>
                <fullName>Office - Inventory  Coordinator</fullName>
            </value>
            <value>
                <fullName>Office - Inventory Leader</fullName>
            </value>
            <value>
                <fullName>Office - Operations Leader</fullName>
            </value>
            <value>
                <fullName>Office - Pricing/Contracts</fullName>
            </value>
            <value>
                <fullName>Office - Sourcing/Logistics Coordinator</fullName>
            </value>
            <value>
                <fullName>Office - Sourcing/Logistics Leader</fullName>
            </value>
            <value>
                <fullName>Sales Associate</fullName>
            </value>
            <value>
                <fullName>Sales Manager with accounts</fullName>
            </value>
            <value>
                <fullName>Sales Manager without accounts</fullName>
            </value>
            <value>
                <fullName>Surgery Case Specialist</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Canada Office</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Canada Recon</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Canada Spine</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet OBT</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Spine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>