force-app/main/default/objects/Contact/fields/ROSA_Event_Detail__c.field-meta.xml
<CustomField>
    <fullName>ROSA_Event_Detail__c</fullName>
    <description>Identifiable details for ROSA Discovery events</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ROSA Event Detail</label>
    <length>200</length>
    <type>Text</type>
</CustomField>