force-app/main/default/objects/Contact/fields/ROSA_Event_History__c.field-meta.xml
<CustomField>
    <fullName>ROSA_Event_History__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ROSA Event History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>