force-app/main/default/objects/Contact/fields/Sales_Area_CH__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area_CH__c</fullName>
    <description>Verkaufsgebiet innerhalb Zimmer Switzerland GmbH</description>
    <label>Verkaufsgebiet Schweiz</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Inaktiv</fullName>
            </value>
            <value>
                <fullName>Zentral Ost</fullName>
            </value>
            <value>
                <fullName>Zentral West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>