force-app/main/default/objects/Contact/fields/Sales_Assoc_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Assoc_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Assoc ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>