force-app/main/default/objects/Contact/fields/Sales_Communications__c.field-meta.xml
<CustomField>
    <fullName>Sales_Communications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by the Field Communications department to identify those who want to receive Sales Communications.</description>
    <label>Sales Communications</label>
    <type>Checkbox</type>
</CustomField>