force-app/main/default/objects/Contact/fields/Sales_Contracts_Count__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contracts_Count__c</fullName>
    <label>AM-US Sales Contracts Count</label>
    <summaryFilterItems>
        <field>HR_Contract__c.Contract_Type__c</field>
        <operation>equals</operation>
        <value>Non-Compete, Non-Compete Verbal</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>HR_Contract__c.Contract_Expired__c</field>
        <operation>equals</operation>
        <value>No</value>
    </summaryFilterItems>
    <summaryForeignKey>HR_Contract__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>